Path Slabs + Placeable Resin Clump

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -8,3 +8,4 @@ public net.minecraft.world.phys.shapes.ArrayVoxelShape <init>(Lnet/minecraft/wor
 public net.minecraft.world.phys.shapes.DiscreteVoxelShape xSize # xSize
 public net.minecraft.world.phys.shapes.DiscreteVoxelShape ySize # ySize
 public net.minecraft.world.phys.shapes.DiscreteVoxelShape zSize # zSize
+public net.minecraft.world.item.ShovelItem FLATTENABLES #FLATTENABLES
